--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -8,11 +8,11 @@
     <h2>{{faceSnap.title}}</h2>
     <p>{{faceSnap.description}}</p>
     <p>snap créé le : {{faceSnap.createdDate}}</p>
-    @if (!faceSnap.location) {
-        <p>lieu non spécifié</p>
-    }
     <p *ngIf="faceSnap.location">
         Lieu de prise : {{faceSnap.location}}
+    </p>
+    <p *ngIf="!faceSnap.location">
+        Lieux de prise : non spécifié
     </p>
     <p>
         <button (click)="onSnap()">{{textButtonMessage}}</button>
