--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -8,12 +8,12 @@
     <h2>{{faceSnap.title}}</h2>
     <p>{{faceSnap.description}}</p>
     <p>snap créé le : {{faceSnap.createdDate}}</p>
-    <p *ngIf="faceSnap.location">
-        Lieu de prise : {{faceSnap.location}}
-    </p>
-    <p *ngIf="!faceSnap.location">
-        Lieux de prise : non spécifié
-    </p>
+    @if (faceSnap.location) {
+        <p>Lieux de prise : {{faceSnap.location}}</p>
+    }
+    @else{
+        <p>Lieux de prise : non spécifié</p>
+    }
     <p>
         <button (click)="onSnap()">{{textButtonMessage}}</button>
         🤳 {{faceSnap.snapsNumber}}
