--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -4,19 +4,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <div class="face-snap-card">
-    <img [src]="faceSnap.urlImage" alt="">
-    <h2>{{faceSnap.title}}</h2>
-    <p>{{faceSnap.description}}</p>
-    <p>snap créé le : {{faceSnap.createdDate}}</p>
-    @if (faceSnap.location) {
-        <p>Lieux de prise : {{faceSnap.location}}</p>
+    <img [src]="faceSnapItem.urlImage" alt="">
+    <h2>{{faceSnapItem.title}}</h2>
+    <p>{{faceSnapItem.description}}</p>
+    <p>snap créé le : {{faceSnapItem.createdDate}}</p>
+    @if (faceSnapItem.location) {
+        <p>Lieux de prise : {{faceSnapItem.location}}</p>
     }
     @else{
         <p>Lieux de prise : non spécifié</p>
     }
     <p>
         <button (click)="onSnap()">{{textButtonMessage}}</button>
-        🤳 {{faceSnap.snapsNumber}}
+        🤳 {{faceSnapItem.snapsNumber}}
     </p>
 </div>
 
