ajout de style grace à la directive ngStyle

--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -16,7 +16,7 @@
     }
     <p>
         <button (click)="onSnap()">{{textButtonMessage}}</button>
-        🤳 {{faceSnapItem.snapsNumber}}
+        <span [ngStyle]="{color: 'rgb(0, '+faceSnapItem.snapsNumber+',0)'}">🤳 <strong>{{faceSnapItem.snapsNumber}}</strong></span>
     </p>
 </div>
 
