utilisation du pipe uppercase

--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -5,9 +5,9 @@
 </head>
 <div class="face-snap-card" [ngClass]="{ snapped: isSnapped }">
     <img [src]="faceSnapItem.urlImage" alt="">
-    <h2>{{faceSnapItem.title}}</h2>
+    <h2>{{faceSnapItem.title | uppercase}}</h2>
     <p>{{faceSnapItem.description}}</p>
-    <p>snap créé le : {{faceSnapItem.createdDate}}</p>
+    <p>snap créé le : {{faceSnapItem.createdDate | date}}</p>
     @if (faceSnapItem.location) {
         <p>Lieux de prise : {{faceSnapItem.location}}</p>
     }
