utilisation du pipe date et modification de la langue pour un affichage francais

--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -7,7 +7,7 @@
     <img [src]="faceSnapItem.urlImage" alt="">
     <h2>{{faceSnapItem.title | uppercase}}</h2>
     <p>{{faceSnapItem.description}}</p>
-    <p>snap créé le : {{faceSnapItem.createdDate | date}}</p>
+    <p>snap créé le : {{faceSnapItem.createdDate | date:"dd-MMMM-YYYY à HH:mm"}}</p>
     @if (faceSnapItem.location) {
         <p>Lieux de prise : {{faceSnapItem.location}}</p>
     }
