--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-@for (faceSnapItem of faceSnapList; track faceSnapItem.title) {
-   <app-face-snap [faceSnapItem]="faceSnapItem" /> 
-}
+<app-header />
+<app-face-snap-list />
