refactoring du service et separation de la logique metier dans le component et le service par enrichissement de la classe FaceSnapClass

--- a/src/app/face-snap-list/face-snap-list.component.html
+++ b/src/app/face-snap-list/face-snap-list.component.html
@@ -1,3 +1,5 @@
 @for (faceSnapItem of faceSnapList; track faceSnapItem.title) {
-    <app-face-snap [faceSnapItem]="faceSnapItem" /> 
- }
+    @if(faceSnapItem.id){
+        <app-face-snap [faceSnapItemId]="faceSnapItem.id" />
+    }
+}
