--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,7 @@
 <header>
     <h2>FaceSnap</h2>
+    <nav>
+        <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" >Home</a>
+        <a routerLink="FaceSnapList" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" >Snapfaces</a>
+    </nav>
 </header>
