--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,4 +2,19 @@ header{
     padding: 4px;
     text-align: center;
     background-color: rgb(179, 231, 179);
+    a{
+        margin: 0 15px;
+        color: rgb(0, 0, 0);
+        padding: 5px 10px;
+        text-decoration: none;
+        &:hover{
+            color: rgb(0, 143, 0);
+        }
+    }
+
+}
+
+.active{
+    color: rgb(0, 143, 0);
+     border-bottom: 1px solid green;
 }
