redirection via la methode redirectTo usant le Module Router et amelioration de la responsivité sur mobile

--- a/src/app/face-snap/face-snap.component.scss
+++ b/src/app/face-snap/face-snap.component.scss
@@ -4,6 +4,7 @@
 .face-snap-card {
   box-sizing: border-box;
   width: 50%;
+  min-width: 350px;
   margin: 20px auto;
   padding: 10px 30px;
   box-shadow: lightgray 4px 4px 20px;
