--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -3,7 +3,7 @@
 
     <div class="landing-links">
         <p>Bienvenu sur l'application FaceSnap</p>
-        <a routerLink="FaceSnapList">Voir les faceSnaps</a>
+        <a (click)="redirectTo()">Voir les faceSnaps</a>
     </div>
     
 </div>
